force-app/main/default/objects/SalesTaxConfiguration__c/SalesTaxConfiguration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is to setup/configure dynamic Sales tax calculation in Boat Builder managed package.</description>
    <label>SalesTaxConfiguration</label>
</CustomObject>