force-app/main/default/objects/SalesTaxConfiguration__c/fields/Canadian_Tax__c.field-meta.xml
<CustomField>
    <fullName>Canadian_Tax__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Canadian Tax</label>
    <type>Checkbox</type>
</CustomField>