force-app/main/default/objects/SalesTaxConfiguration__c/fields/Doc_Fee_Taxable__c.field-meta.xml
<CustomField>
    <fullName>Doc_Fee_Taxable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Doc Fee Taxable</label>
    <type>Checkbox</type>
</CustomField>