force-app/main/default/objects/SalesTaxConfiguration__c/fields/Labor_Tax__c.field-meta.xml
<CustomField>
    <fullName>Labor_Tax__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Labor Tax</label>
    <type>Checkbox</type>
</CustomField>