force-app/main/default/objects/SalesTaxConfiguration__c/fields/Misc_Tax__c.field-meta.xml
<CustomField>
    <fullName>Misc_Tax__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Misc Tax</label>
    <type>Checkbox</type>
</CustomField>