force-app/main/default/objects/SalesTaxConfiguration__c/fields/Part_Tax__c.field-meta.xml
<CustomField>
    <fullName>Part_Tax__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Part Tax</label>
    <type>Checkbox</type>
</CustomField>