force-app/main/default/objects/SalesTaxConfiguration__c/fields/PST__c.field-meta.xml
<CustomField>
    <fullName>PST__c</fullName>
    <label>PST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>