force-app/main/default/objects/SalesTaxConfiguration__c/fields/Quote_Trade_Allowance_Taxable__c.field-meta.xml
<CustomField>
    <fullName>Quote_Trade_Allowance_Taxable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote Trade Allowance Taxable</label>
    <type>Checkbox</type>
</CustomField>