force-app/main/default/objects/SalesTaxConfiguration__c/fields/Reg_Fee_Taxable__c.field-meta.xml
<CustomField>
    <fullName>Reg_Fee_Taxable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reg Fee Taxable</label>
    <type>Checkbox</type>
</CustomField>