force-app/main/default/objects/SalesTaxConfiguration__c/fields/Regular_Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Regular_Sales_Tax__c</fullName>
    <label>Regular Sales Tax%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>