force-app/main/default/objects/SalesTaxConfiguration__c/fields/Shop_Supplies_Tax__c.field-meta.xml
<CustomField>
    <fullName>Shop_Supplies_Tax__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Shop Supplies Tax</label>
    <type>Checkbox</type>
</CustomField>