force-app/main/default/objects/SalesTaxConfiguration__c/fields/Tax_Capping_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tax_Capping_Amount__c</fullName>
    <label>Tax Capping Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>