force-app/main/default/objects/SalesTaxConfiguration__c/fields/Vehicle_Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Sales_Tax__c</fullName>
    <label>Vehicle Sales Tax%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>