force-app/main/default/objects/SalesTaxConfiguration__c/fields/Web_Invoice_Taxable__c.field-meta.xml
<CustomField>
    <fullName>Web_Invoice_Taxable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Web Invoice Taxable</label>
    <type>Checkbox</type>
</CustomField>