force-app/main/default/objects/SalesTaxConfiguration__c/fields/Website_Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Website_Endpoint_URL__c</fullName>
    <label>Website Endpoint URL</label>
    <type>Url</type>
</CustomField>